--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
     <!-- Theme style -->
-    <link rel="stylesheet" href="/assets/css/adminlte.min.css" />
+    <link rel="stylesheet" href="/public/dist/css/adminlte.min.css" />
   </head>
   <body>
     <div id="root"></div>
@@ -26,7 +26,7 @@
     <!-- Bootstrap -->
     <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="/assets/js/adminlte.min.js"></script>
+    <script src="/public/dist/js/adminlte.min.js"></script>
     <!-- React App -->
     <script type="module" src="/src/main.jsx"></script>
     <!-- OPTIONAL SCRIPTS -->
