--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sistema de gestión de videoclub - Administra películas, clientes y personal de manera eficiente y rápida." />
     <title>AdminLTE + React</title>
     
     <!-- Google Font: Source Sans Pro -->
